005: show all todos in home page

--- a/templates/home.html
+++ b/templates/home.html
@@ -1,1 +1,11 @@
-{% extends base.html %}
+{% extends 'base.html' %}
+{% block title %} Home {% endblock title %}
+{% block content %}
+    {% for todo in todos %}
+        <h3>{{ todo.title }}</h3>
+        <small>{{ todo.title }}</small>
+        <small>{{ todo.created }}</small>
+        <p>{{ todo.body }}</p>
+    <hr>
+    {% endfor%}
+{% endblock content %}
