--- a/templates/base.html
+++ b/templates/base.html
@@ -20,6 +20,7 @@
 </head>
 <body>
     {% include 'navbar.html' %}
+    {% include 'messages.html' %}
     <div class="jumbotron">
         {% block content %}
         {% endblock content %}
