--- a/templates/base.html
+++ b/templates/base.html
@@ -16,6 +16,11 @@
             margin-bottom: 20px;
             background-color: #e9ecef;
         }
+        .create{
+            padding: 20px;
+            margin-top: 20px;
+            margin-bottom: 20px;
+        }
     </style>
 </head>
 <body>
