--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -2,6 +2,13 @@
     <div class="container-fluid">
         <div class="navbar-nav">
         <a class="nav-link active" aria-current="page" href="{% url 'home' %}">Home</a>
-        <a class="nav-link" href="{% url 'create' %}">Create</a>
+        <a class="nav-link" href="{% url 'create' %}">Create Todo</a>
+        {% if request.user.is_authenticated %}
+            <a class="nav-link" href="{% url 'logout' %}">Logout</a>
+        {% else %}
+            <a class="nav-link" href="{% url 'register' %}">Register</a>
+            <a class="nav-link" href="{% url 'login' %}">Login</a>
+        {% endif %}
+        </div>
     </div>
 </nav>
